[package]
name = "aeabi_fns"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
# none!

[dev-dependencies]
getrandom = "0.2"
bytemuck = "1"

[features]
default = []

# When active and with an ARM target, the implementation uses inline assembly
# with instructions ordered to favor ARMv4T CPUs. Currently this will cause a
# build error on any ARM target that defaults to Thumb code and that doesn't
# support interworking (cfg can't yet detect this specific case, unfortunately).
# This feature has no effect on non-ARM targets.
armv4t = []

# Causes functions to declare a `link_section` prefixed with `.iwram.`, which is
# intended for when you're using these functions on the GBA. If you're using
# this crate elsewhere the extra `link_section` attribute may cause problems.
link_iwram = []
